--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>GentriMap</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
@@ -36,74 +36,52 @@
         </div>
 
         <div id="toolbox">
-            <form id="datasets">
-                <fieldset>
-                    <legend>Karte 1</legend>
-                    <label>
-                        Dataset
-                    </label>
-                    <select>
-                    </select>
-                    <label>
-                        Farbe
-                    </label>                    
-                    <input class="minicolors" type="text" value="#3b98bd">
-                    <label>
-                        Zoom
-                    </label>
-                    <div class="zoom-slider">
-                    </div>
-                    <label class="checkbox">
-                        <input name="street-map-1" type="checkbox" class="street-map-toggle"> Street Map zeigen
-                    </label>
-
-                </fieldset>
-                <fieldset class="disabled">
-                    <legend>
-                        <input name="karte-2" type="checkbox" class="legend-checkbox"> Karte 2
-                    </legend>
-                    <label class="checkbox">
-                        <input name="overlay" type="checkbox" disabled> Über Karte 1 zeigen
-                    </label>
-                    <label>
-                        Dataset
-                    </label>
-                    <select disabled>
-                    </select>
-                    <label>
-                        Farbe
-                    </label>                    
-                    <input class="minicolors" type="text" value="#3b98bd" disabled>
-                    <label>
-                        Zoom
-                    </label>
-                    <label class="checkbox">
-                        <input name="zoom-link" type="checkbox" disabled> Link mit Karte 1
-                    </label>
-                    <div class="zoom-slider">
-                    </div>
-                    <label class="checkbox">
-                        <input name="street-map-2" type="checkbox" class="street-map-toggle" disabled> Street Map zeigen
-                    </label>
-                </fieldset>
-                
+            <form id="karte-1-controls">
+            </form>
+            <form id="karte-2-controls">
             </form>
         </div>
 
         <div id="main">
-            
         </div>
 
 
 
-        <script id="optionCityDataSet" type="text/template">
+        <script id="dataSetOptionView" type="text/template">
             <%= name %>
+        </script>
+
+        <script type="text/template" id="dataSetsToolboxView">
+            <legend>
+                <input name="karte-2" type="checkbox" class="legend-checkbox secondary toggle-control"> <%= title() %>
+            </legend>
+            <label>
+                Dataset
+            </label>
+            <select class="toggle" disabled>
+            </select>
+            <label>
+                Farbe
+            </label>                    
+            <input class="minicolors toggle" type="text" value="#3b98bd" disabled>
+            <label>
+                Zoom
+            </label>
+            <label class="checkbox secondary">
+                <input class="toggle zoom-link" name="zoom-link" type="checkbox" disabled> Link mit Karte 1
+            </label>
+            <div class="zoom-slider">
+            </div>
+            <label class="checkbox">
+                <input name="street-map-1" type="checkbox" class="street-map-toggle toggle" disabled> Street Map zeigen
+            </label>
         </script>
 
         <script id="CityDataSetMapView" type="text/template">
             <h1><%= name %></h1>
             <canvas id="canvas"></canvas>
             <div id="year-slider"></div>
+            <h3 class="year-display"></h3>
         </script>
 
 
@@ -114,6 +92,7 @@
         <script>window.jQuery || document.write('<script src="_/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script type="text/javascript" src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
         <script type="text/javascript" src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
+        <script src="_/js/vendor/backbone.marionette.min.js"></script>
         <script src="_/js/vendor/bootstrap.min.js"></script>
         <script src="_/js/vendor/jquery-ui-1.9.1.custom.min.js"></script>
         <script src="_/js/vendor/jquery.minicolors.js"></script>
