remove overhead from  html

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
                   <div id="trend-karte" class="invisible row">
                     <div class="col-xs-12">
-                      <p>Die Karte zeigt die Veränderungsdynamiken von Berliner Ortsteilen im Zeitraum 2007 bis 2011. Das Farbsprektrum der <a href="http://gentrimap.net/gentritrend-2007-bis-2010-erste-ergebnisse/">Typologie</a> ergibt sich aus der Kombination sozialer und wohnungswirtschaftlicher Trends, die auf der Basis verschiedener <a href="http://gentrimap.net/indikatoren-welche-daten-werden-von-uns-genutzt/">Indikatoren</a> berechnet wurden. Die dunkelroten Felder (überdurchschnittlicher sozialer Trend / überdurchschnittlicher wohnungswirtschaftlicher Trend) kennzeichnen die Gebiete mit der höchsten Veränderungsdynamik. (Mehr zur <a href="http://gentrimap.net/gentrimap-berechnung-der-indices">Indexberechnung</a>).</p> 
-                      <p>Mit dem Cursor können einzelnen Felder der 9er-Typologie ausgewählt werden, um die Ortsteile auf der Karte hervorzuheben. </p>
+                      <!--p>Die Karte zeigt die Veränderungsdynamiken von Berliner Ortsteilen im Zeitraum 2007 bis 2011. Das Farbsprektrum der <a href="http://gentrimap.net/gentritrend-2007-bis-2010-erste-ergebnisse/">Typologie</a> ergibt sich aus der Kombination sozialer und wohnungswirtschaftlicher Trends, die auf der Basis verschiedener <a href="http://gentrimap.net/indikatoren-welche-daten-werden-von-uns-genutzt/">Indikatoren</a> berechnet wurden. Die dunkelroten Felder (überdurchschnittlicher sozialer Trend / überdurchschnittlicher wohnungswirtschaftlicher Trend) kennzeichnen die Gebiete mit der höchsten Veränderungsdynamik. (Mehr zur <a href="http://gentrimap.net/gentrimap-berechnung-der-indices">Indexberechnung</a>).</p> 
+                      <p>Mit dem Cursor können einzelnen Felder der 9er-Typologie ausgewählt werden, um die Ortsteile auf der Karte hervorzuheben. </p-->
                       <p>Quellen: Amt für Statistik Berlin-Brandenburg, Senatsverwaltung für Stadtentwicklung und Umwelt, ImmobilienScout 24</p>
                     </div>
                     <div class="col-xs-12">
@@ -182,8 +182,8 @@
 
                   <div id="trend-matrix" class="invisible">
                     <div class="col-xs-12 clearfix">
-                      <p>Die Vektorgrafik zeigt die Statusveränderungen der Berliner Ortsteile im Zeitraum von 2007 bis 2011. Auf der horizontalen Achse sind die wohnungswirtschaftlichen und auf der vertikalen Achse die sozialen Statuswerte definiert. Der Status basiert auf einer statistischen Abweichung der Indikatorenwerte vom Berliner Durchschnitt (Nullpunkt beider Achsen). Die Länge und Ausrichtung der Vektorpfeile entsprechen der Entwicklungsrichtung und des Ausmaßes der Statusveränderungen. (Mehr zur <a href="http://gentrimap.net/gentrimap-berechnung-der-indices">Indexberechnung</a>).</p>
-                      <p>Mit dem Cursor können einzelnen Felder der 9er-Typologie ausgewählt werden, um die entsprechenden Ortsteile in der Matrix hervorzuheben. Beim Auswählen einzelner Vektorpfeile mit dem Cursor erscheinen Informationen zum Ortsteil und den Statusveränderungen.</p>
+                      <!--p>Die Vektorgrafik zeigt die Statusveränderungen der Berliner Ortsteile im Zeitraum von 2007 bis 2011. Auf der horizontalen Achse sind die wohnungswirtschaftlichen und auf der vertikalen Achse die sozialen Statuswerte definiert. Der Status basiert auf einer statistischen Abweichung der Indikatorenwerte vom Berliner Durchschnitt (Nullpunkt beider Achsen). Die Länge und Ausrichtung der Vektorpfeile entsprechen der Entwicklungsrichtung und des Ausmaßes der Statusveränderungen. (Mehr zur <a href="http://gentrimap.net/gentrimap-berechnung-der-indices">Indexberechnung</a>).</p>
+                      <p>Mit dem Cursor können einzelnen Felder der 9er-Typologie ausgewählt werden, um die entsprechenden Ortsteile in der Matrix hervorzuheben. Beim Auswählen einzelner Vektorpfeile mit dem Cursor erscheinen Informationen zum Ortsteil und den Statusveränderungen.</p-->
                       <p>Quellen: Amt für Statistik Berlin-Brandenburg, Senatsverwaltung für Stadtentwicklung und Umwelt, ImmobilienScout 24</p>
                     </div>
                     <div class="col-xs-12">
@@ -256,7 +256,7 @@
           </div><!-- /full width wrap -->
         </div> <!--#innerwrap-->
       </div> <!--#outerwrap-->
-    <footer>
+    <!--footer>
       <div class="container">
         <div id="sidebar-subsidiary" class="sidebar">
           <section id="text-2" class="widget widget-1 widget-first widget_text widget-widget_text">
@@ -270,11 +270,10 @@
               a.holm --at-- sowi.hu-berlin.de
             </div>
 		      </section>
-        </div><!-- #sidebar-subsidiary -->
         <br/>
         <p style="opacity:.7;">Datenvisualisierung von <a target ="_blank" href="http://littlewebgiants.com">Little Web Giants</a>.</p>
       </div>
-    </footer>   
+    </footer-->   
     <!-- All the scripts. Program logic is in gentrimap.js. This could be done better with angular.js or similar  -->
     <script type='text/javascript' src='_/js/vendor/bootstrap.min.js'></script>
     <script type='text/javascript' src='_/js/vendor/underscore.min.js'></script>
