adapted colour of not typed districts

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="col-xs-12">
                       <!--p>Die Karte zeigt die Veränderungsdynamiken von Berliner Ortsteilen im Zeitraum 2007 bis 2011. Das Farbsprektrum der <a href="http://gentrimap.net/gentritrend-2007-bis-2010-erste-ergebnisse/">Typologie</a> ergibt sich aus der Kombination sozialer und wohnungswirtschaftlicher Trends, die auf der Basis verschiedener <a href="http://gentrimap.net/indikatoren-welche-daten-werden-von-uns-genutzt/">Indikatoren</a> berechnet wurden. Die dunkelroten Felder (überdurchschnittlicher sozialer Trend / überdurchschnittlicher wohnungswirtschaftlicher Trend) kennzeichnen die Gebiete mit der höchsten Veränderungsdynamik. (Mehr zur <a href="http://gentrimap.net/gentrimap-berechnung-der-indices">Indexberechnung</a>).</p> 
                       <p>Mit dem Cursor können einzelnen Felder der 9er-Typologie ausgewählt werden, um die Ortsteile auf der Karte hervorzuheben. </p-->
-                      <p>Quellen: Amt für Statistik Berlin-Brandenburg, Senatsverwaltung für Stadtentwicklung und Umwelt, ImmobilienScout 24</p>
+                      <p>Quellen: Amt für Statistik Landeshauptstadt München, ImmobilienScout 24</p>
                     </div>
                     <div class="col-xs-12">
                       <!-- Visualisation (map) is inserted here. -->
@@ -108,7 +108,7 @@
                         </div>
                       </div>
                       <!-- These descriptions are shown and hidden when the user clicks on the colour key/legend. -->
-                      <div class="typ-description invisible">
+                      <!--div class="typ-description invisible">
                         <div class="upwohn upsd invisible">
                           <h4>Typ "Konsolidierte Aufwertung" (W + // SDI +)</h4>
                           <p>Hervorgehoben sind diejenigen Gebiete, die eine überdurchschnittlich hohe Anstieg der Wohnkosten verzeichnen und eine positive sozialstrukturelle Dynamik aufweisen. Zum einen steigen in diesen Gebieten die wohnungswirtschaftlichen Indikatoren wie z.B. die durchschnittliche Angebotsmiete stark an. Gleichzeitig nimmt der soziale Problemdruck innerhalb der Bewohnerschaft im Vergleich zur Entwicklung Berlins überdurchschnittlich stark ab. </p>
@@ -174,7 +174,7 @@
                           <p>Dass keine Gebiete in dieser Kategorie vorhanden sind, zeigt erneut, dass die Marktanspannung in Berlin im Untersuchungszeitraum zugenommen hat. Normalerweise ist zu erwarten, dass die Verschlechterung der Sozialstruktur mit einer Abwertung des Wohnungsbestandes einhergeht, in dessen Folge die Wohnungsmarktindikatoren sich verschlechtern. </p>
 
                         </div>
-                      </div>
+                      </div-->
                     </div>
                   </div>
 
@@ -184,7 +184,7 @@
                     <div class="col-xs-12 clearfix">
                       <!--p>Die Vektorgrafik zeigt die Statusveränderungen der Berliner Ortsteile im Zeitraum von 2007 bis 2011. Auf der horizontalen Achse sind die wohnungswirtschaftlichen und auf der vertikalen Achse die sozialen Statuswerte definiert. Der Status basiert auf einer statistischen Abweichung der Indikatorenwerte vom Berliner Durchschnitt (Nullpunkt beider Achsen). Die Länge und Ausrichtung der Vektorpfeile entsprechen der Entwicklungsrichtung und des Ausmaßes der Statusveränderungen. (Mehr zur <a href="http://gentrimap.net/gentrimap-berechnung-der-indices">Indexberechnung</a>).</p>
                       <p>Mit dem Cursor können einzelnen Felder der 9er-Typologie ausgewählt werden, um die entsprechenden Ortsteile in der Matrix hervorzuheben. Beim Auswählen einzelner Vektorpfeile mit dem Cursor erscheinen Informationen zum Ortsteil und den Statusveränderungen.</p-->
-                      <p>Quellen: Amt für Statistik Berlin-Brandenburg, Senatsverwaltung für Stadtentwicklung und Umwelt, ImmobilienScout 24</p>
+                      <p>Quellen: Amt für Statistik Landeshauptstadt München, ImmobilienScout 24</p>
                     </div>
                     <div class="col-xs-12">
                       <!-- Drop down menu, populated with the city districts -->
