set the x-axis to the ground in the legend and adding a field to the legend for not upgrading areas

--- a/index.html
+++ b/index.html
@@ -76,12 +76,6 @@
                       <!-- The colour key/legend for the 9 trends. -->
                       <div class="legend">
                         <div id="matrix-legend">
-                          <div class="x-axis">
-                              <p class="small">Sozio-Demo Index</p>
-                              <span>-</span>
-                              <span>o</span>
-                              <span>+</span>
-                          </div>
                           <div class="y-axis">
                               <p class="small">Wohnen Index</p>
                               <span>-</span>
@@ -105,8 +99,40 @@
                                 <a href="#" class="upsd downwohn"></a>
                             </div>
                           </div>
+                          <div class="x-axis">
+                              <span>-</span>
+                              <span>o</span>
+                              <span>+</span>
+                              <p class="small">Sozio-Demo Index</p>
+                          </div>
+                          <div class="colours" id="colours-ext">
+                            	<div>
+                                <a href="#" class="notsd notwohn"></a>
+                            	</div>
+                         	</div>
                         </div>
                       </div>
+                      <!--div class="legend-ext">
+                      	 <div class="colours">
+                            <!--div>
+                                <a href="#" class="upsd upwohn"></a>                               
+                            </div>
+                            <div>
+                                <a href="#" class="midsd midwohn"></a>                                
+                            </div>
+                            <div>
+                                <a href="#" class="downsd downwohn"></a>
+                            </div-->
+                            <div>
+                                <a href="#" class="notsd notwohn"></a>
+                            </div>
+                         </div>
+                         <div class="x-axis-ext">
+                          	<!--p class="small"> No Upgrading </p-->
+                          	<!--p> No Upgrading </p-->
+                         </div>
+                     	</div-->
+                      
                       <!-- These descriptions are shown and hidden when the user clicks on the colour key/legend. -->
                       <!--div class="typ-description invisible">
                         <div class="upwohn upsd invisible">
@@ -193,12 +219,12 @@
                       <div id='matrix' class=""></div>
                       <div class="legend">
                         <div id="matrix-legend">
-                          <div class="x-axis">
+                          <!--div class="x-axis">
                               <p class="small">Sozio-Demo Index</p>
                               <span>-</span>
                               <span>o</span>
                               <span>+</span>
-                          </div>
+                          </div-->
                           <div class="y-axis">
                               <p class="small">Wohnen Index</p>
                               <span>-</span>
@@ -222,8 +248,20 @@
                                 <a href="#" class="upsd downwohn"></a>
                             </div>
                           </div>
+                          <div class="x-axis">
+                              <span>-</span>
+                              <span>o</span>
+                              <span>+</span>
+                              <p class="small">Sozio-Demo Index</p>
+                          </div>
+                          <div class="colours" id="colours-ext">
+                            	<div>
+                                <a href="#" class="notsd notwohn"></a>
+                            	</div>
+                         	</div>
                         </div>
                       </div>
+                      
                       <!-- Populated with data about a city district on hover/select menu -->
                       <div id="matrix-info"></div>
                     </div>
