--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                       <div class="legend">
                         <div id="matrix-legend">
                           <div class="y-axis">
-                              <p class="small">Wohnen Index</p>
+                              <p class="small">Res-Econ Index</p>
                               <span>-</span>
                               <span>o</span>
                               <span>+</span>
@@ -103,7 +103,7 @@
                               <span>-</span>
                               <span>o</span>
                               <span>+</span>
-                              <p class="small">Sozio-Demo Index</p>
+                              <p class="small">Socio-Demo Index</p>
                           </div>
                           <div class="colours" id="colours-ext">
                             	<div>
@@ -226,7 +226,7 @@
                               <span>+</span>
                           </div-->
                           <div class="y-axis">
-                              <p class="small">Wohnen Index</p>
+                              <p class="small">Res-Econ Index</p>
                               <span>-</span>
                               <span>o</span>
                               <span>+</span>
@@ -252,7 +252,7 @@
                               <span>-</span>
                               <span>o</span>
                               <span>+</span>
-                              <p class="small">Sozio-Demo Index</p>
+                              <p class="small">Socio-Demo Index</p>
                           </div>
                           <div class="colours" id="colours-ext">
                             	<div>
