Add link + emphasise

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                             distribution. This work develops a framework which quantifies change in the
                             relevant dimensions and sets up a gentrification typology for clearly communicating 
                             the results of the analysis. Applying this framework in a city sheds
-                            light on recent local developments as demonstrated here with Munich and the period
-                            between 2008 and 2012.
+                            light on recent local developments as demonstrated here with <strong>Munich</strong> and the <strong>period
+                            between 2008 and 2012</strong>.
                           </p>
                           <p>
                             The socio-demographic dimension represents change in the social status of
@@ -109,7 +109,7 @@ Neighbourhoods that do not experience actual upgrading in both dimensions, indep
                           <p>
                             The legend on the right side has a horizontal axis that indicates development in the socio-demographic
                             dimension and a vertical axis that indicates development in the residential-economic dimension. Strong gentrification tendencies are indicated by approaching the top-right corner while the category in the bottom-left corner represents neighbourhoods that exhibit no signs of gentrification. For more details on the
-                            applied methodology and algorithms, have a look at the thesis.
+                            applied methodology and algorithms, have a look at the <a href="http://www.schnuko.rlvtn.de/gentrimap/thesis.pdf" target="blank">thesis</a>.
                           </p>
                         </div>
                       </div>
