Make Map start tab

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
                   <!-- Add additional buttons here to navigation to different visualisations. The id is used in gentrimap.js to initialise the code for the relevant vis. The href should be the id of the div that contains your new vis. -->
                   <div class="btn-group vis-navigation">
-                    <span type="button" class="btn btn-default active"><a id="introLink" href="#intro">Intro</a></span>
-                    <span type="button" class="btn btn-default"><a id="trendMapLink" href="#trend-karte">Map</a></span>
+                    <span type="button" class="btn btn-default"><a id="introLink" href="#intro">Info</a></span>
+                    <span type="button" class="btn btn-default active"><a id="trendMapLink" href="#trend-karte">Map</a></span>
                     <span type="button" class="btn btn-default"><a id="trendMatrixLink" href="#trend-matrix">Typology</a></span>
                     <span type="button" class="btn btn-default"><a id="wanderungLink" href="#wanderung">Initial Status</a></span>
                   </div>
@@ -109,7 +109,7 @@ Neighbourhoods that do not experience actual upgrading in both dimensions, indep
                           <p>
                             The legend on the right side has a horizontal axis that indicates development in the socio-demographic
                             dimension and a vertical axis that indicates development in the residential-economic dimension. Strong gentrification tendencies are indicated by approaching the top-right corner while the category in the bottom-left corner represents neighbourhoods that exhibit no signs of gentrification. For more details on the
-                            applied methodology and algorithms, have a look at the <a href="http://www.schnuko.rlvtn.de/gentrimap/thesis.pdf" target="blank">thesis</a>.
+                            applied methodology and algorithms that result in the two indices for each neighbourhood, have a look at the <a href="http://www.schnuko.rlvtn.de/gentrimap/thesis.pdf" target="blank">thesis</a>.
                           </p>
                         </div>
                       </div>
