--- a/index.html
+++ b/index.html
@@ -73,42 +73,36 @@
                         <div id="desc-container">
                           <p> There is no comprehensive approach for measuring gentrification tendencies
                             in different neighbourhoods spread over a city, especially in the context of
-                            Germany. Thus, the actors who are involved in gentrification and concerned
-                            by the consequences lack reliable information about its intensity and spatial
-                            distribution. This work develops a framework which quantifies change in the
+                            Germany. This work develops a framework which quantifies change in the
                             relevant dimensions and sets up a gentrification typology for clearly communicating 
-                            the results of the analysis. Applying this framework in a city sheds
-                            light on recent local developments as demonstrated here with <strong>Munich</strong> and the <strong>period
-                            between 2008 and 2012</strong>.
+                            the results of the analysis. It is demonstrated here for <strong>Munich</strong> and the <strong>period between 2008 and 2012</strong>.
                           </p>
                           <p>
                             The socio-demographic dimension represents change in the social status of
                             the local population. The residential-economic dimension reflects change in type and affordability
                             of the local housing supply that is offered on the website of ImmobilienScout24. 
-                            Emphasised by revisiting the original definition by Glass, the
-                            socio-demographic and the residential-economic dimension represent the driving forces behind gentrification.
-                            The proposed gentrification typology assigns each neighbourhood one of the following four types:
+                            Emphasised by revisiting the original definition by Glass, they represent the driving forces behind gentrification. The proposed gentrification typology assigns each neighbourhood one of the following types:
                           </p>
                           <ol>
-                            <li> <strong> <span class="type1"> Above-average gentrification area: </span> </strong>
+                            <li>  <div class="type1"> <strong> Above-average gentrification area: </strong> </div>
 Neighbourhoods that experience actual upgrading and above-average,
 relational upgrading in both dimensions.
                             </li>
-                            <li> <strong><span class="type2">Below-average gentrification area: </span></strong>
+                            <li> <div class="type2"> <strong>Below-average gentrification area: </strong> </div>
 Neighbourhoods that experience actual upgrading and below-average,
 relational upgrading in both dimensions
                             </li>
-                            <li>  <strong><span class="type3">Actually upgrading, not gentrifying area: </span></strong>
+                            <li>  <div class="type3"> <strong>Actually upgrading, not gentrifying area: </strong> </div>
 Neighbourhoods that experience actual upgrading in both dimensions,
 though relational upgrading at most in one dimension
                             </li>
-                            <li>  <strong><span class="type4">Not upgrading, not gentrifying area: </span></strong>
+                            <li>  <div class="type4"> <strong>Not upgrading, not gentrifying area: </strong></div>
 Neighbourhoods that do not experience actual upgrading in both dimensions, independent from their relational development
                             </li>
                           </ol>
                           <p>
-                            The legend on the right side has a horizontal axis that indicates development in the socio-demographic
-                            dimension and a vertical axis that indicates development in the residential-economic dimension. Strong gentrification tendencies are indicated by approaching the top-right corner while the category in the bottom-left corner represents neighbourhoods that exhibit no signs of gentrification. For more details on the
+                            The legend on the right side has a horizontal direction that indicates development in the socio-demographic
+                            dimension and a vertical one that indicates development in the residential-economic dimension. Strong gentrification tendencies are indicated by approaching the top-right corner, while the category in the bottom-left corner represents neighbourhoods that exhibit no signs of gentrification. For more details on the
                             applied methodology and algorithms that result in the two indices for each neighbourhood, have a look at the <a href="http://www.schnuko.rlvtn.de/gentrimap/thesis.pdf" target="blank">thesis</a>.
                           </p>
                         </div>
